[gd_scene load_steps=10 format=3 uid="uid://c54ne36dr70pf"]

[ext_resource type="Script" uid="uid://b021djhgcubdx" path="res://scenes/Main.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/InventoryPanel.tscn" id="2"]
[ext_resource type="PackedScene" path="res://scenes/SkillsPanel.tscn" id="3"]
[ext_resource type="PackedScene" path="res://scenes/ActionBar.tscn" id="4"]
[ext_resource type="PackedScene" path="res://scenes/MapPanel.tscn" id="5"]
[ext_resource type="PackedScene" path="res://scenes/TownPanel.tscn" id="6"]
[ext_resource type="PackedScene" path="res://scenes/ZonePanel.tscn" id="7"]
[ext_resource type="PackedScene" path="res://scenes/NodePanel.tscn" id="8"]
[ext_resource type="PackedScene" path="res://scenes/InfoBox.tscn" id="9"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
layout_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Ritournelle Text Harness"
horizontal_alignment = 1

[node name="AccountBox" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="AccountLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/AccountBox"]
layout_mode = 2
text = "Account"

[node name="AccountSelectRow" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/AccountBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="AccountSelect" type="OptionButton" parent="ScrollContainer/MarginContainer/VBoxContainer/AccountBox/AccountSelectRow"]
layout_mode = 2
size_flags_horizontal = 3
custom_minimum_size = Vector2(0, 40)

[node name="SelectAccountButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/AccountBox/AccountSelectRow"]
layout_mode = 2
text = "Select Account"
custom_minimum_size = Vector2(0, 40)

[node name="AccountCreateRow" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/AccountBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="AccountNameInput" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/AccountBox/AccountCreateRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "New account name"
custom_minimum_size = Vector2(0, 40)

[node name="CreateAccountButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/AccountBox/AccountCreateRow"]
layout_mode = 2
text = "Create Account"
custom_minimum_size = Vector2(0, 40)

[node name="CharacterBox" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 6

[node name="CharacterLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/CharacterBox"]
layout_mode = 2
text = "Character"

[node name="CharacterNameRow" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/CharacterBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="NameLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer/CharacterBox/CharacterNameRow"]
layout_mode = 2
text = "Name"

[node name="NameInput" type="LineEdit" parent="ScrollContainer/MarginContainer/VBoxContainer/CharacterBox/CharacterNameRow"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter character name"
custom_minimum_size = Vector2(0, 40)

[node name="CreateRow" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/CharacterBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="CreateHarvesterButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/CharacterBox/CreateRow"]
layout_mode = 2
text = "Create Harvester"

[node name="CreateFighterButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/CharacterBox/CreateRow"]
layout_mode = 2
text = "Create Fighter"

[node name="ManageRow" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/CharacterBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="CharacterSelect" type="OptionButton" parent="ScrollContainer/MarginContainer/VBoxContainer/CharacterBox/ManageRow"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SelectButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/CharacterBox/ManageRow"]
layout_mode = 2
text = "Select"

[node name="DeleteButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/CharacterBox/ManageRow"]
layout_mode = 2
text = "Delete"

[node name="NavigationLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Navigation"

[node name="NavigationRow" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="MapButton" type="Button" parent="ScrollContainer/MarginContainer/VBoxContainer/NavigationRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "Map"
custom_minimum_size = Vector2(0, 44)

[node name="PrimaryActionBar" parent="ScrollContainer/MarginContainer/VBoxContainer/NavigationRow" instance=ExtResource("4")]
layout_mode = 2
size_flags_horizontal = 3

[node name="LogBox" parent="ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("9")]
layout_mode = 2

[node name="Status" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Status..."
vertical_alignment = 1
autowrap_mode = 2

[node name="MapPanel" parent="." instance=ExtResource("5")]

[node name="TownPanel" parent="." instance=ExtResource("6")]

[node name="ZonePanel" parent="." instance=ExtResource("7")]

[node name="NodePanel" parent="." instance=ExtResource("8")]

[node name="InventoryPanel" parent="." instance=ExtResource("2")]

[node name="SkillsPanel" parent="." instance=ExtResource("3")]
